# qv-ollama-sdk

./: CHANGELOG.md  README.md  THINKING_MODE_IMPLEMENTATION.md  TOOL_CALLING_IMPLEMENTATION.md  debug_thinking.py  pyproject.toml
examples/: simple_chat.py  simple_client.py  simple_thinking_tools_example.py  streaming_chat.py  streaming_client.py  streaming_comparison.py  thinking_mode_example.py  tool_calling_example.py  tool_execution_example.py
src/qv_ollama_sdk/: __init__.py  client.py
src/qv_ollama_sdk/domain/: __init__.py  models.py
src/qv_ollama_sdk/services/: __init__.py  ollama_conversation_service.py
tests/: __init__.py  test_models.py  test_ollama_service.py
