[project]
name = "qv-ollama-sdk"
version = "0.1.0"
description = "A simple SDK for interacting with the Ollama API by automatically creating a conversation (chat history)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Thomas Bernhard", email = "thomas@quantyverse.com"}
]
keywords = ["ollama", "llm", "ai", "chat", "sdk", "domain-driven-design"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "ollama>=0.4.7",
    "pytest>=8.3.4",
]

[project.urls]
"Homepage" = "https://github.com/quantyverse/qv-ollama-sdk"
"Bug Tracker" = "https://github.com/quantyverse/qv-ollama-sdk/issues"
"Documentation" = "https://github.com/quantyverse/qv-ollama-sdk#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["qv_ollama_sdk", "qv_ollama_sdk.domain", "qv_ollama_sdk.services"]
package-dir = {"" = "src"}




